force-app/main/default/objects/AcctPlanQuestionnaire__c/AcctPlanQuestionnaire__c.object-meta.xml
<CustomObject>
    <label>Account Plan Questionnaire</label>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Account Plan Questionnaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Questionnaire</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>