force-app/main/default/objects/AcctPlanQuestionnaire__c/fields/isStandard__c.field-meta.xml
<CustomField>
    <fullName>isStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isStandard</label>
    <type>Checkbox</type>
</CustomField>