force-app/main/default/objects/AcctPlanQuestionnaire__c/fields/OptionBank__c.field-meta.xml
<CustomField>
    <fullName>OptionBank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OptionBank</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipName>Account_Plan_Questionnair</relationshipName>
    <type>Lookup</type>
</CustomField>