force-app/main/default/objects/AcctPlanQuestionnaire__c/fields/OptionFleetCard__c.field-meta.xml
<CustomField>
    <fullName>OptionFleetCard__c</fullName>
    <label>OptionFleetCard</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PTT</fullName>
            </value>
            <value>
                <fullName>ESSO</fullName>
            </value>
            <value>
                <fullName>Bangchak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>