force-app/main/default/objects/AcctPlanQuestionnaire__c/fields/OptionNumber__c.field-meta.xml
<CustomField>
    <fullName>OptionNumber__c</fullName>
    <label>OptionNumber</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>