force-app/main/default/objects/AcctPlanQuestionnaire__c/fields/OptionPercent__c.field-meta.xml
<CustomField>
    <fullName>OptionPercent__c</fullName>
    <label>OptionPercent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>