force-app/main/default/objects/AcctPlanQuestionnaire__c/fields/OptionText__c.field-meta.xml
<CustomField>
    <fullName>OptionText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OptionText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>