force-app/main/default/objects/AcctPlanQuestionnaire__c/fields/Product_Label__c.field-meta.xml
<CustomField>
    <fullName>Product_Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>