force-app/main/default/objects/AcctPlanQuestionnaire__c/fields/Question_TH__c.field-meta.xml
<CustomField>
    <fullName>Question_TH__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Question TH</label>
    <type>TextArea</type>
</CustomField>