force-app/main/default/objects/AcctPlanQuestionnaire__c/fields/QuestionnaireTag1__c.field-meta.xml
<CustomField>
    <fullName>QuestionnaireTag1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Questionnaire Tag1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>