force-app/main/default/objects/AcctPlanQuestionnaire__c/fields/QuestionnaireTag2__c.field-meta.xml
<CustomField>
    <fullName>QuestionnaireTag2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Questionnaire Tag2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>