force-app/main/default/objects/AcctPlanQuestionnaire__c/fields/QuestionnaireUniqueName__c.field-meta.xml
<CustomField>
    <fullName>QuestionnaireUniqueName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Questionnaire Unique Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>