force-app/main/default/objects/AcctPlanQuestionnaire__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic Collection Method</fullName>
            </value>
            <value>
                <fullName>Export Collection Method</fullName>
            </value>
            <value>
                <fullName>Collection Questionnaire</fullName>
            </value>
            <value>
                <fullName>Payment Questionnaire</fullName>
            </value>
            <value>
                <fullName>Domestic Payment Method</fullName>
            </value>
            <value>
                <fullName>Payment Method Import</fullName>
            </value>
            <value>
                <fullName>Liquidity Management</fullName>
            </value>
            <value>
                <fullName>L/G issuing</fullName>
            </value>
            <value>
                <fullName>L/G Project</fullName>
            </value>
            <value>
                <fullName>AVAL &amp; Acceptance</fullName>
            </value>
            <value>
                <fullName>International bank section1</fullName>
            </value>
            <value>
                <fullName>International bank section2</fullName>
            </value>
            <value>
                <fullName>Shipping guarantee</fullName>
            </value>
            <value>
                <fullName>Request L/G</fullName>
            </value>
            <value>
                <fullName>FX Hedging Behavior</fullName>
            </value>
            <value>
                <fullName>FX Hedging experience</fullName>
            </value>
            <value>
                <fullName>Credit protection risk</fullName>
            </value>
            <value>
                <fullName>Non credit life insurance</fullName>
            </value>
            <value>
                <fullName>Non Life insurance</fullName>
            </value>
            <value>
                <fullName>Insurance Internet Banking</fullName>
            </value>
            <value>
                <fullName>Credit life insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>