force-app/main/default/objects/AcctPlanQuestionnaire__c/fields/Sub_Domain__c.field-meta.xml
<CustomField>
    <fullName>Sub_Domain__c</fullName>
    <description>ใช้สำหรับ Step4</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ใช้สำหรับ Step4</inlineHelpText>
    <label>Sub Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>